Imprved color palette to make it more readable

--- a/src/app/WeeklyForceast/weeklyForecast.css
+++ b/src/app/WeeklyForceast/weeklyForecast.css
@@ -1,5 +1,5 @@
 .weekly-forecast-container {
-    background-color: #b9e2f5;
+    background-color: #7f9BA6;
     height: 200px;
     display: flex;
     justify-content: center;
