--- a/src/app/CurrentWeather/currentWeather.css
+++ b/src/app/CurrentWeather/currentWeather.css
@@ -1,5 +1,5 @@
 .current-weather-container {
-    background-color: #84cdee;
+    background-color: #01bfff;
     width: 100%;
     height: 50%;
     display: flex;
