--- a/src/app/app.css
+++ b/src/app/app.css
@@ -5,7 +5,7 @@ html, body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 800;
-    background-color: #dcf0fa;
+    background-color: whitesmoke;
     padding-top: 50px;
-    color: white;
+    color: #f1f1f1;
 }
