--- a/src/app/common/Navbar/navbar.css
+++ b/src/app/common/Navbar/navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #84cdee;
+  background-color: #0d9de3;
   position: fixed;
   top: 0;
   width: 100%;
@@ -9,7 +9,7 @@
 .navbar a {
   float: left;
   display: block;
-  color: #edf7fc;
+  color: #f1f1f1;
   text-align: center;
   padding: 15px;
   text-decoration: none;
